Bug 310536 - Message viewer doesn't remember choice of headers between sessions
Summary: Message viewer doesn't remember choice of headers between sessions
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 4.9.3
Platform: Chakra Linux
: NOR minor
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-23 01:53 UTC by Bernd Oliver Sünderhauf
Modified: 2012-11-23 14:57 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernd Oliver Sünderhauf 2012-11-23 01:53:40 UTC
While the message preview does remember the choice of headers display style between sessions, the single message viewer doesn't. It should be either temporary (as the attachment display style) or permanent (as in the main screen's message preview), but in some way consistent.

Reproducible: Always

Steps to Reproduce:
1. Double-click on a mail to open it in the viewer
2. Change the headers display style and the attachment display style
3. Close and reopen mail => choice of headers remembered, choice of attachments not
4. Close and restart kmail.
5. Reopen mail => choice of headers reset to default
Comment 1 Laurent Montel 2012-11-23 06:57:53 UTC
I confirm it.
Will fix it.
Comment 2 Laurent Montel 2012-11-23 07:34:54 UTC
Git commit 178b90611b215148c0d0a7633fd14f013387cc46 by Montel Laurent.
Committed on 23/11/2012 at 08:33.
Pushed by mlaurent into branch 'KDE/4.9'.

Fix Bug 310536 - Message viewer doesn't remember choice of headers

between sessions.
Don't save state when external window
FIXED-IN: 4.9.4

M  +1    -0    kmail/kmreaderwin.cpp
M  +6    -1    messageviewer/viewer.cpp
M  +2    -0    messageviewer/viewer.h
M  +8    -2    messageviewer/viewer_p.cpp
M  +2    -0    messageviewer/viewer_p.h

http://commits.kde.org/kdepim/178b90611b215148c0d0a7633fd14f013387cc46
Comment 3 Bernd Oliver Sünderhauf 2012-11-23 14:57:50 UTC
Wow! That was quick! :)