Fix Bug 310536 - Message viewer doesn't remember choice of headers

between sessions.
Don't save state when external window
FIXED-IN: 4.9.4
BUG: 310536